ci: lock pnpm to version 6 because version 7 is incompatible

--- a/ee/admin-server/Dockerfile
+++ b/ee/admin-server/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:16-alpine as builder
 WORKDIR /src
 
-RUN npm install -g pnpm
+RUN npm install -g pnpm@6
 
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY ee/admin-server/package.json                    ./ee/admin-server/package.json
