--- a/packages/binding/package.json
+++ b/packages/binding/package.json
@@ -30,6 +30,7 @@
 		"@contember/react-multipass-rendering": "workspace:*",
 		"@contember/react-utils": "workspace:*",
 		"chevrotain": "6.5.0",
+		"fast-deep-equal": "^3.1.3",
 		"js-levenshtein": "1.1.6",
 		"uuid": "8.3.2"
 	},
