--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install pnpm
-        run: npm install -g pnpm
+        run: npm install -g pnpm@6
 
       - name: Setup node
         uses: actions/setup-node@main
