add dev mode for playwright pages running on 3007 port by default

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,11 +54,8 @@ services:
 
   playwright:
     image: mcr.microsoft.com/playwright:v1.20.0-focal
-    command: ['npm', 'run', 'test:playwright']
+    command: ['npm', 'run', 'pw:dev']
     user: '1000:1000'
-
-    deploy:
-      replicas: 0
 
     environment:
       DISPLAY: ${DISPLAY}
