Add S3 environment override for local PW tests to pass

--- a/docker-compose.override.dist.yaml
+++ b/docker-compose.override.dist.yaml
@@ -12,6 +12,8 @@ services:
 
   contember-engine:
     ports: ['3001:4000']
+    environment:
+      DEFAULT_S3_ENDPOINT: 'http://minio:9000/'
 
   adminer:
     ports: ['3002:8080']
