--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: npm install -g pnpm@6
+      - run: npm install -g pnpm
       - run: pnpm install
       - run: pnpm run eslint:lint
       - run: pnpm run build
@@ -76,7 +76,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: npm install -g pnpm@6
+      - run: npm install -g pnpm
       - run: pnpm install
       - run: pnpm run --recursive --parallel -- build:js:prod
       - run: cd packages/admin && pnpm run pw:build
@@ -112,7 +112,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: npm install -g pnpm@6
+      - run: npm install -g pnpm
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm config set "//registry.npmjs.org/:_authToken" "$NPM_TOKEN"
