--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -21,10 +21,7 @@
 	"scripts": {
 		"build": "pnpm run build:js:dev && pnpm run build:js:prod",
 		"build:js:dev": "vite build --mode development",
-		"build:js:prod": "vite build --mode production",
-		"ae:build": "api-extractor run --local",
-		"ae:test": "api-extractor run"
-
+		"build:js:prod": "vite build --mode production"
 	},
 	"peerDependencies": {
 		"react": "^17"
