--- a/ee/admin-server/package.json
+++ b/ee/admin-server/package.json
@@ -12,7 +12,7 @@
 		"watch:public": "vite build public --config vite.config.js --watch",
 		"build:server": "esbuild src/run-admin.ts --bundle --sourcemap --platform=node --outdir=dist/server",
 		"watch:server": "esbuild src/run-admin.ts --bundle --sourcemap --platform=node --outdir=dist/server --watch",
-		"test": "vitest tests"
+		"test": "vitest --dir tests"
 	},
 	"bin": {
 		"run-admin": "dist/run-admin.js"
