--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"pw:debug-only": "cd packages/admin && docker-compose run --rm playwright-tests npm run -- pw:debug",
 		"start": "docker-compose up --detach && pnpm run -- contember migrations:execute . --yes",
 		"storybook": "cd packages/ui && pnpm run storybook",
-		"test": "pnpm run --recursive --parallel -- test run",
+		"test": "pnpm run --recursive -- test --run",
 		"ts:build": "tsc --build",
 		"ts:watch": "tsc --build --watch",
 		"ae:build": "pnpm run --recursive --parallel -- ae:build",
@@ -38,8 +38,8 @@
 		"@types/react-dom": "17.0.9",
 		"@typescript-eslint/eslint-plugin": "4.29.0",
 		"@typescript-eslint/parser": "4.29.0",
-		"@vitejs/plugin-react-refresh": "^1.3.6",
-		"esbuild": "^0.14.31",
+		"@vitejs/plugin-react": "^2.1.0",
+		"esbuild": "0.15.7",
 		"eslint": "7.32.0",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-prettier": "3.4.0",
@@ -53,7 +53,7 @@
 		"tsm": "2.2.1",
 		"tsx": "3.2.1",
 		"typescript": "4.7.4",
-		"vite": "2.9.1",
-		"vitest": "0.6.1"
+		"vite": "3.1.0",
+		"vitest": "0.23.1"
 	}
 }
