--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
 		"vite": "cd packages/admin-sandbox && pnpm run -- start"
 	},
 	"devDependencies": {
-		"@microsoft/api-extractor": "^7.28.4",
+		"@microsoft/api-extractor": "^7.33.5",
 		"@types/classnames": "2.2.10",
-		"@types/react": "17.0.30",
-		"@types/react-dom": "17.0.9",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
 		"@typescript-eslint/eslint-plugin": "4.29.0",
 		"@typescript-eslint/parser": "4.29.0",
-		"@vitejs/plugin-react": "^2.1.0",
+		"@vitejs/plugin-react": "^2.2.0",
 		"esbuild": "0.15.7",
 		"eslint": "7.32.0",
 		"eslint-config-prettier": "8.3.0",
@@ -47,8 +47,8 @@
 		"eslint-plugin-react-hooks": "4.2.0",
 		"jsdom": "^17.0.0",
 		"prettier": "2.3.2",
-		"react": "17.0.2",
-		"react-dom": "17.0.2",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"sass": "1.49.11",
 		"tsm": "2.2.1",
 		"tsx": "3.2.1",
