update deps, react 18 support

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -41,34 +41,34 @@
 		"@popperjs/core": "2.10.2",
 		"chroma-js": "2.1.2",
 		"classnames": "2.3.1",
-		"react-aria": "3.9.0",
-		"react-popper": "2.2.5",
+		"react-aria": "^3.20.0",
+		"react-popper": "^2.3.0",
 		"react-select": "5.3.2",
-		"react-stately": "3.8.0",
-		"react-textarea-autosize": "8.3.3"
+		"react-stately": "^3.18.0",
+		"react-textarea-autosize": "^8.3.4"
 	},
 	"peerDependencies": {
-		"react": "^17",
-		"react-dom": "^17"
+		"react": "^17 || ^18",
+		"react-dom": "^17 || ^18"
 	},
 	"devDependencies": {
 		"@babel/core": "7.15.5",
-		"@storybook/addon-actions": "6.5.7",
-		"@storybook/addon-essentials": "6.5.7",
-		"@storybook/addon-links": "6.5.7",
-		"@storybook/addons": "6.5.7",
+		"@storybook/addon-actions": "6.5.13",
+		"@storybook/addon-essentials": "6.5.13",
+		"@storybook/addon-links": "6.5.13",
+		"@storybook/addons": "6.5.13",
 		"@storybook/preset-scss": "1.0.3",
 		"@storybook/react": "6.5.7",
 		"@testing-library/react-hooks": "^8.0.1",
 		"@types/node": "15.0.2",
-		"@types/react": "17.0.30",
-		"@types/react-dom": "17.0.9",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
 		"babel-loader": "8.2.2",
 		"babel-plugin-transform-vite-meta-env": "1.0.3",
 		"css-loader": "5.2.4",
 		"csstype": "3.0.8",
-		"react": "^17",
-		"react-dom": "^17",
+		"react": "^18",
+		"react-dom": "^18",
 		"resolve-url-loader": "4.0.0",
 		"sass": "1.36.0",
 		"sass-loader": "10.1.1",
