--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -59,12 +59,12 @@
 		"fuse.js": "6.4.6",
 		"intl-messageformat": "9.9.1",
 		"is-hotkey": "0.1.8",
-		"leaflet": "1.7.1",
+		"leaflet": "^1.9.2",
 		"path-to-regexp": "6.2.0",
 		"qrcode-generator": "^1.4.4",
 		"react-dropzone": "10.2.2",
 		"react-error-boundary": "3.1.3",
-		"react-leaflet": "2.8.0",
+		"react-leaflet": "^4.1.0",
 		"react-select": "5.3.2",
 		"react-sortable-hoc": "2.0.0",
 		"slate": "0.73.1",
@@ -73,32 +73,31 @@
 		"stacktracey": "2.1.7"
 	},
 	"peerDependencies": {
-		"react": "^17",
-		"react-dom": "^17"
+		"react": "^17 || ^18",
+		"react-dom": "^17 || ^18"
 	},
 	"devDependencies": {
 		"@contember/schema": "^1.0.0-rc.16",
 		"@contember/schema-definition": "^1.0.0-rc.16",
 		"@contember/schema-migrations": "^1.0.0-rc.16",
 		"@contember/schema-utils": "^1.0.0-rc.16",
-		"@playwright/test": "^1.20.0",
+		"@playwright/test": "1.20.0",
 		"@types/blueimp-md5": "2.18.0",
 		"@types/debounce": "1.2.0",
 		"@types/is-hotkey": "0.1.5",
-		"@types/leaflet": "1.7.5",
+		"@types/leaflet": "^1.9.0",
 		"@types/node": "^16",
 		"@types/node-fetch": "2.6.1",
-		"@types/react": "17.0.30",
-		"@types/react-dom": "17.0.9",
-		"@types/react-leaflet": "2.8.2",
-		"@types/react-test-renderer": "^17",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/react-test-renderer": "^18",
 		"csstype": "3.0.8",
 		"jsdom": "^18.0.0",
 		"node-fetch": "^2.6.5",
 		"pg": "^8.7.3",
-		"playwright": "^1.20.0",
-		"react": "^17",
-		"react-dom": "^17",
-		"react-test-renderer": "^17"
+		"playwright": "1.20.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-test-renderer": "^18"
 	}
 }
