--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
-	"files": [],
-	"include": [],
+	"files": [ ],
+	"include": [ ],
 	"references": [
-		{ "path": "./ee/admin-server"},
-		{ "path": "./packages/admin"},
-		{ "path": "./packages/admin-i18n"},
-		{ "path": "./packages/admin-sandbox"},
+		{ "path": "./ee/admin-server" },
+		{ "path": "./packages/admin" },
+		{ "path": "./packages/admin-i18n" },
+		{ "path": "./packages/admin-sandbox" },
 		{ "path": "./packages/binding" },
-		{ "path": "./packages/client"},
-		{ "path": "./packages/react-client"},
-		{ "path": "./packages/react-multipass-rendering"},
-		{ "path": "./packages/react-utils"},
+		{ "path": "./packages/client" },
+		{ "path": "./packages/react-client" },
+		{ "path": "./packages/react-multipass-rendering" },
+		{ "path": "./packages/react-utils" },
 		{ "path": "./packages/ui" },
-		{ "path": "./packages/vimeo-file-uploader" }
+		{ "path": "./packages/vimeo-file-uploader" },
+		{ "path": "./packages/vite" }
 	],
 	"ts-node": {
 		"moduleTypes": {
