refactor(vite-plugin): rename vite package to vite-plugin

--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@contember/vite",
+	"name": "@contember/vite-plugin",
 	"license": "Apache-2.0",
 	"version": "0.0.0",
 	"type": "module",
