--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
 	"type": "module",
+	"private": true,
 	"scripts": {
-		"build": "yarn workspaces foreach -pt run build",
+		"build": "yarn run ts:build && yarn workspaces foreach -pt run build",
+		"changeset": "changeset",
 		"check": "./scripts/runChecks.sh",
-		"reinstall": "docker run --rm --interactive --tty --network=host -v \"$PWD:$PWD\" -w \"$PWD\" -u \"1000\" node:16-alpine npx pnpm@6 install",
-		"clean": "yarn clean:dependencies && yarn clean:generated",
+		"reinstall": "docker run --rm --interactive --tty --network=host -v \"$PWD:$PWD\" -w \"$PWD\" -u \"1000\" node:16-alpine npx yarn@2 install",
+		"clean": "yarn run clean:dependencies && yarn run clean:generated",
 		"clean:dependencies": "rm -rf node_modules ee/*/node_modules packages/*/node_modules",
 		"clean:generated": "rm -rf dist ee/*/dist ee/*/temp packages/*/dist packages/*/temp",
 		"contember": "docker-compose run contember-cli",
 		"deploy": "yarn workspaces foreach -pt run deploy",
 		"eslint:fix": "eslint --fix \"**/*.{ts,tsx}\" ",
 		"eslint:lint": "eslint \"**/*.{ts,tsx}\" ",
-		"pw:build": "cd packages/admin && docker-compose run --rm playwright-tests npm run -- pw:build",
-		"pw:preview": "cd packages/admin && docker-compose run --rm playwright-tests npm run -- pw:preview",
-		"pw:report": "cd packages/admin && yarn pw:report",
-		"pw:update": "yarn pw:build && yarn pw:update-only",
-		"pw:update-only": "cd packages/admin && docker-compose run --rm playwright-tests npm run -- pw:update",
-		"pw:test": "yarn pw:build && yarn pw:test-only",
-		"pw:test-only": "cd packages/admin && docker-compose run --rm playwright-tests npm run -- pw:test",
-		"pw:debug": "yarn pw:build && yarn pw:debug-only",
-		"pw:debug-only": "cd packages/admin && docker-compose run --rm playwright-tests npm run -- pw:debug",
-		"start": "docker-compose up --detach && yarn contember migrations:execute . --yes & yarn start:sandbox",
-		"start:sandbox": "yarn workspace @contember/admin-sandbox start",
-		"storybook": "yarn workspace @contember/ui storybook",
+		"pw:build": "cd packages/admin && docker-compose run --rm playwright-tests yarn run pw:build",
+		"pw:preview": "cd packages/admin && docker-compose run --rm playwright-tests yarn run pw:preview",
+		"pw:report": "cd packages/admin && yarn run pw:report",
+		"pw:update": "yarn run pw:build && yarn run pw:update-only",
+		"pw:update-only": "cd packages/admin && docker-compose run --rm playwright-tests yarn run pw:update",
+		"pw:test": "yarn run pw:build && yarn run pw:test-only",
+		"pw:test-only": "cd packages/admin && docker-compose run --rm playwright-tests yarn run pw:test",
+		"pw:debug": "yarn run pw:build && yarn run pw:debug-only",
+		"pw:debug-only": "cd packages/admin && docker-compose run --rm playwright-tests yarn run pw:debug",
+		"start": "docker-compose up --detach && yarn run contember migrations:execute . --yes",
+		"storybook": "cd packages/ui && yarn run storybook",
 		"test": "yarn workspaces foreach -pt run test --run",
 		"ts:build": "tsc --build",
 		"ts:watch": "tsc --build --watch",
 		"ae:build": "yarn workspaces foreach -pt run ae:build",
-		"ae:update": "yarn clean:generated && yarn ts:build && yarn ae:build",
-		"ae:test": "yarn workspaces foreach -pt run ae:test"
+		"ae:update": "yarn run clean:generated && yarn run ts:build && yarn run ae:build",
+		"ae:test": "yarn workspaces foreach -pt run ae:test",
+		"build:js:prod": "yarn workspaces foreach run build",
+		"admin:pw:build": "yarn workspace @contember/admin run pw:build",
+		"admin:pw:test": "yarn workspace @contember/admin run pw:test",
+		"vite": "cd packages/admin-sandbox && yarn run start"
 	},
 	"devDependencies": {
 		"@microsoft/api-extractor": "^7.33.5",
@@ -58,5 +63,7 @@
 	"workspaces": [
 		"ee/*",
 		"packages/*"
-	]
+	],
+	"version": "0.0.0",
+	"packageManager": "yarn@3.5.0"
 }
