--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,5 @@
 nodeLinker: node-modules
+yarnPath: .yarn/releases/yarn-3.5.0.cjs
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
