--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,7 @@
 	"type": "module",
 	"sideEffects": false,
 	"scripts": {
-		"build": "pnpm run build:js:dev && pnpm run build:js:prod",
+		"build": "yarn build:js:dev && yarn build:js:prod",
 		"build:js:dev": "vite build --mode development",
 		"build:js:prod": "vite build --mode production",
 		"ae:build": "api-extractor run --local",
