Add types from `vite/client` to support `import.meta.env.DEV`
This adds type for `import.meta` to every package extending from base `tsconfig.json` and removes necessity to define types on per-package basis.

--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -20,6 +20,9 @@
 		"sourceMap": true,
 		"strict": true,
 		"target": "ES2020",
-		"useDefineForClassFields": true
+		"useDefineForClassFields": true,
+		"types": [
+			"vite/client"
+		]
 	}
 }
