--- a/packages/vite-plugin/src/tsconfig.json
+++ b/packages/vite-plugin/src/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../../../tsconfig.settings.json",
 	"compilerOptions": {
-		"outDir": "../dist/types"
+		"outDir": "../dist/types",
+		"types": ["node"],
 	}
 }
