--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"fast-glob": "^3.2.12",
 		"jsdom": "^17.0.0",
+		"json5": "^2.2.3",
 		"prettier": "2.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
