Upgrade Playwright & Update test cases

--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -35,7 +35,7 @@
 		"pw:preview": "vite preview tests/playwright/admin",
 		"pw:dev": "vite dev tests/playwright/admin",
 		"pw:update": "playwright test --update-snapshots",
-		"pw:report": "playwright show-report",
+		"pw:report": "playwright show-report tests/playwright/admin",
 		"pw:test": "playwright test",
 		"pw:debug": "playwright test --debug --project='Desktop Chrome'",
 		"ae:build": "api-extractor run --local",
@@ -81,7 +81,7 @@
 		"@contember/schema-migrations": "^1.2.0",
 		"@contember/schema-utils": "^1.2.0",
 		"@mangoweb/sass-base": "0.0.8",
-		"@playwright/test": "1.20.0",
+		"@playwright/test": "1.32.3",
 		"@types/blueimp-md5": "2.18.0",
 		"@types/is-hotkey": "0.1.5",
 		"@types/leaflet": "^1.9.0",
@@ -94,7 +94,7 @@
 		"jsdom": "^18.0.0",
 		"node-fetch": "^2.6.5",
 		"pg": "^8.7.3",
-		"playwright": "1.20.0",
+		"playwright": "1.32.3",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-test-renderer": "^18"
