Update `ae:update` script
- Adds true fallback for cleanup script to succeed
- Cleans TS build before running build again

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
 		"changeset": "changeset",
 		"check": "./scripts/runChecks.sh",
 		"reinstall": "docker run --rm --interactive --tty --network=host -v \"$PWD:$PWD\" -w \"$PWD\" -u \"1000\" node:16-alpine npx yarn@2 install",
-		"clean": "yarn run clean:dependencies && yarn run clean:generated",
-		"clean:dependencies": "rm -rf node_modules \"ee/*/node_modules\" \"packages/*/node_modules\"",
-		"clean:generated": "rm -rf dist \"ee/*/dist\" \"ee/*/temp\" \"packages/*/dist\" \"packages/*/temp\"",
+		"clean": "yarn run clean:generated && yarn run clean:dependencies",
+		"clean:dependencies": "rm -rf ee/*/node_modules || true; rm -rf packages/*/node_modules || true; rm -rf node_modules || true",
+		"clean:generated": "rm -rf dist || true; rm -rf ee/*/dist || true; rm -rf ee/*/temp || true; packages/*/dist || true; rm -rf packages/*/temp || true",
 		"contember": "docker-compose run contember-cli",
 		"deploy": "yarn workspaces foreach -pt run deploy",
 		"eslint:fix": "eslint --fix \"**/*.{ts,tsx}\" ",
@@ -28,7 +28,7 @@
 		"ts:build": "tsc --build",
 		"ts:watch": "tsc --build --watch",
 		"ae:build": "yarn workspaces foreach -pt run ae:build",
-		"ae:update": "yarn run clean:generated && yarn run ts:build && yarn run ae:build",
+		"ae:update": "yarn run clean:generated && yarn run ts:build --clean && yarn run ts:build && yarn run ae:build",
 		"ae:test": "yarn workspaces foreach -pt run ae:test",
 		"build:js:prod": "yarn workspaces foreach run build",
 		"admin:pw:build": "yarn workspace @contember/admin run pw:build",
