refactor: Move NavigateBackLink to admin package

--- a/packages/admin/src/tsconfig.json
+++ b/packages/admin/src/tsconfig.json
@@ -9,6 +9,7 @@
 		{ "path": "../../react-client/src" },
 		{ "path": "../../react-multipass-rendering/src" },
 		{ "path": "../../react-utils/src" },
+		{ "path": "../../utilities/src" },
 		{ "path": "../../ui/src" }
 	]
 }
