--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -50,6 +50,7 @@
 		"@contember/react-multipass-rendering": "workspace:*",
 		"@contember/react-utils": "workspace:*",
 		"@contember/ui": "workspace:*",
+		"@contember/utilities": "workspace:*",
 		"@formatjs/icu-messageformat-parser": "2.0.11",
 		"@sindresorhus/slugify": "0.11.0",
 		"blueimp-md5": "2.18.0",
@@ -59,6 +60,7 @@
 		"intl-messageformat": "9.9.1",
 		"is-hotkey": "0.1.8",
 		"leaflet": "^1.9.2",
+		"lucide-react": "^0.108.0",
 		"path-to-regexp": "6.2.0",
 		"qrcode-generator": "^1.4.4",
 		"react-dropzone": "10.2.2",
