Upgrade Storybook to v7 & Remove old stories

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,8 +30,8 @@
 		"build:css:copy-fonts": "rm -rf \"dist/assets/Inter\" && cp -R \"src/assets/Inter\" \"dist/assets/Inter\"",
 		"ae:build": "api-extractor run --local",
 		"ae:test": "api-extractor run",
-		"storybook": "start-storybook -p 6006",
-		"build-storybook": "build-storybook",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
 		"test": "vitest"
 	},
 	"dependencies": {
@@ -52,12 +52,16 @@
 	"devDependencies": {
 		"@babel/core": "7.15.5",
 		"@mangoweb/sass-base": "0.0.8",
-		"@storybook/addon-actions": "6.5.13",
-		"@storybook/addon-essentials": "6.5.13",
-		"@storybook/addon-links": "6.5.13",
-		"@storybook/addons": "6.5.13",
+		"@storybook/addon-actions": "7.0.7",
+		"@storybook/addon-essentials": "7.0.7",
+		"@storybook/addon-interactions": "^7.0.7",
+		"@storybook/addon-links": "7.0.7",
+		"@storybook/addons": "7.0.7",
+		"@storybook/blocks": "^7.0.7",
 		"@storybook/preset-scss": "1.0.3",
-		"@storybook/react": "6.5.7",
+		"@storybook/react": "7.0.7",
+		"@storybook/react-vite": "^7.0.7",
+		"@storybook/testing-library": "^0.0.14-next.2",
 		"@testing-library/react-hooks": "^8.0.1",
 		"@types/node": "15.0.2",
 		"@types/react": "^18",
@@ -66,12 +70,14 @@
 		"babel-plugin-transform-vite-meta-env": "1.0.3",
 		"css-loader": "5.2.4",
 		"csstype": "3.0.8",
+		"prop-types": "^15.8.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"resolve-url-loader": "4.0.0",
 		"sass": "1.36.0",
 		"sass-loader": "10.1.1",
 		"source-map-loader": "2.0.1",
+		"storybook": "^7.0.7",
 		"style-loader": "2.0.0",
 		"webpack": "5.72.0"
 	}
