--- a/packages/admin-sandbox/package.json
+++ b/packages/admin-sandbox/package.json
@@ -14,8 +14,7 @@
 		"@contember/admin": "workspace:*",
 		"@contember/cms-layout": "workspace:*",
 		"@contember/interface-tester": "workspace:*",
-		"@contember/ui": "workspace:*",
-		"@welldone-software/why-did-you-render": "^6.2.3"
+		"@contember/ui": "workspace:*"
 	},
 	"dependencies": {
 		"@contember/schema": "^1.2.0",
