refactor: Move utilities to a separate package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 		{ "path": "./packages/react-multipass-rendering" },
 		{ "path": "./packages/react-utils" },
 		{ "path": "./packages/ui" },
+		{ "path": "./packages/utilities" },
 		{ "path": "./packages/vimeo-file-uploader" },
 		{ "path": "./packages/vite-plugin" }
 	],
