--- a/ee/cms-layout/package.json
+++ b/ee/cms-layout/package.json
@@ -42,19 +42,17 @@
 	},
 	"dependencies": {
 		"@contember/admin": "workspace:*",
+		"@contember/brand": "workspace:*",
+		"@contember/layout": "workspace:*",
 		"@contember/react-utils": "workspace:*",
-		"@contember/ui": "workspace:*",
-		"@react-aria/utils": "^3.15.0",
-		"deep-equal": "^2.2.0",
-		"lucide-react": "^0.108.0",
-		"wait-for-element-transition": "^3.3.1"
+		"@contember/utilities": "workspace:*",
+		"@react-aria/utils": "^3.15.0"
 	},
 	"peerDependencies": {
 		"react": "^17 || ^18",
 		"react-dom": "^17 || ^18"
 	},
 	"devDependencies": {
-		"@types/deep-equal": "^1.0.1",
 		"react": "^18",
 		"react-dom": "^18"
 	}
