--- a/ee/cms-layout/src/tsconfig.json
+++ b/ee/cms-layout/src/tsconfig.json
@@ -5,7 +5,9 @@
   },
 	"references": [
 		{ "path": "../../../packages/admin/src" },
+		{ "path": "../../../packages/brand/src" },
+		{ "path": "../../../packages/layout/src" },
 		{ "path": "../../../packages/react-utils/src" },
-		{ "path": "../../../packages/ui/src" },
+		{ "path": "../../../packages/utilities/src" },
 	]
 }
