refactor: Update Admin Sandbox

--- a/packages/admin-sandbox/admin/tsconfig.json
+++ b/packages/admin-sandbox/admin/tsconfig.json
@@ -6,6 +6,7 @@
 	},
 	"references": [
 		{ "path": "../../../ee/cms-layout/src" },
-		{ "path": "../../admin/src" }
+		{ "path": "../../admin/src" },
+		{ "path": "../../brand/src" },
 	]
 }
