feat: Use Apache 2.0 License for CMS layout

--- a/ee/admin-server/Dockerfile
+++ b/ee/admin-server/Dockerfile
@@ -6,7 +6,6 @@ COPY .yarn																						./.yarn
 
 # Enterprise Edition
 COPY ee/admin-server/package.json											./ee/admin-server/package.json
-COPY ee/cms-layout/package.json												./ee/cms-layout/package.json
 
 # Community Edition
 COPY packages/admin/package.json											./packages/admin/package.json
@@ -15,6 +14,7 @@ COPY packages/admin-sandbox/package.json							./packages/admin-sandbox/package.
 COPY packages/binding/package.json										./packages/binding/package.json
 COPY packages/brand/package.json											./packages/brand/package.json
 COPY packages/client/package.json											./packages/client/package.json
+COPY packages/cms-layout/package.json									./packages/cms-layout/package.json
 COPY packages/interface-tester/package.json						./packages/interface-tester/package.json
 COPY packages/layout/package.json											./packages/layout/package.json
 COPY packages/react-client/package.json								./packages/react-client/package.json
