feat(admin-sandbox): Update layouts

--- a/packages/admin-sandbox/admin/tsconfig.json
+++ b/packages/admin-sandbox/admin/tsconfig.json
@@ -5,8 +5,8 @@
 		"emitDeclarationOnly": false
 	},
 	"references": [
-		{ "path": "../../cms-layout/src" },
 		{ "path": "../../admin/src" },
 		{ "path": "../../brand/src" },
+		{ "path": "../../layout/src" },
 	]
 }
