--- a/packages/admin-sandbox/package.json
+++ b/packages/admin-sandbox/package.json
@@ -13,8 +13,8 @@
 	"devDependencies": {
 		"@contember/admin": "workspace:*",
 		"@contember/brand": "workspace:*",
-		"@contember/cms-layout": "workspace:*",
 		"@contember/interface-tester": "workspace:*",
+		"@contember/layout": "workspace:*",
 		"@contember/ui": "workspace:*"
 	},
 	"dependencies": {
